Represent function signatures over TypeTemplate and make TypeSignature strictly ground
`TypeSignature` conflated three roles: a concrete type's identity (`varchar(5)`), an
open *template* with holes that a function `Signature` carries (`decimal(p, s)`,
`array(E)`), and the parse target of type syntax. The template role had no first-class
representation — a type variable was a bare parameterless `TypeSignature` whose base was
the variable name, a numeric variable a `TypeParameter.Variable`: the same concept (a
hole) encoded two ways and disambiguated only by out-of-band constraint maps at bind time.

Introduce `TypeTemplate` as the open form — sealed `TypeApplication | TypeVariable`, with
`TemplateParameter` and a structured `NumericExpression` for calculated parameters — and
make `TypeSignature` the strictly-ground form that can no longer hold a variable. A
function `Signature` now carries its argument and return types as `TypeTemplate`s over one
unified variable-declaration list; `SignatureBinder` matches, extracts, and applies them
natively; all signature construction builds templates; the legacy variable-bearing
parse-and-bind path is removed; and `TypeParameter.Variable` is dropped from the ground form.

Signatures now render type variables in their declared case, so SHOW FUNCTIONS displays
`array(E)` where it previously showed `array(e)`.

SPI breaks are intentional and recorded as accepted revapi differences; the JSON wire form
is the unchanged type string.